@@ -1,3 +1,8 @@
+2020-02-01  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/java/ball/maven/wagon/providers/AbstractWagonProvider.java:
+	Support Wagon URLs of the form s3:https://host/path.
+
 2020-01-31  Allen D. Ball  <ball@hcf.dev>
 
 	* src/main/java/ball/maven/wagon/providers/GSWagon.java,
